--- a/css/estilosExa.css
+++ b/css/estilosExa.css
@@ -65,7 +65,7 @@
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
-    border: 1px rgb(0, 0, 0);
+    border: 1px black;
     border-radius: 10px;
 
 }
@@ -79,11 +79,13 @@
 
 .imagenes {
     display: block;
-    border: 1px rgb(0, 0, 0);
-    margin: auto;
-    border-radius: 10px;
-    padding: 12px;
-    width: 300px;
+    border: 1px black;
+    margin: center;
+    padding: 5px;
+    width: 100px;
+    height: 100px;
+    display: inline;   
+    justify-content: center; 
 }
 
 /* Selector de Etiqueta html */
